--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       </div>
       <div class="footer-column">
         <h3 class="section-title">Let’s Message me</h3>
-        <form>
+        <form class="contact">
           <input type="text" id="name" placeholder="Your name">
           <input type="email" id="email" placeholder="Your email">
           <textarea id="message" cols="30" rows="10" placeholder="Messsage"></textarea>
