--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/portfolio.css" />
+
+    <script src="https://kit.fontawesome.com/a750acc993.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <header class="header">
@@ -31,8 +35,8 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="btn-primary">Download CV</button>
-          <button class="btn-primary">Contact</button>
+          <button class="btn-primary btn-pair"><i class="fa-solid fa-download"></i> Download CV</button>
+          <button class="btn-primary btn-pair"><i class="fa-solid fa-phone"></i> Contact</button>
         </div>
         <img class="propic" src="images/hardy.png" alt="" />
       </div>
@@ -171,7 +175,7 @@
           </div>
         </div>
         <div class="download-cv">
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
         </div>
       </section>
       <!-- Resume Section ends -->
@@ -191,7 +195,7 @@
         <form class="contact">
           <input type="text" id="name" placeholder="Your name">
           <input type="email" id="email" placeholder="Your email">
-          <textarea id="message" cols="30" rows="10" placeholder="Messsage"></textarea>
+          <textarea id="message" cols="30" rows="5" placeholder="Messsage"></textarea>
           <input class="btn-primary" type="button" value="submit">
         </form>
       </div>
